Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15600

Platform regression: Qt for Symbian does not implement QApplication::keyboardInputDirection() or QApplication::keyboardInputLocale()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.8.0
    • 4.7.0, 4.7.1
    • Core: Event loop
    • None
    • 32f3fcd9ab19f66cb435e6a8830ce54ccf13885a

    Description

      The functions will currently return default values, making them unusable in cross platform code.

      The former of these functions are required for QTBUG-13860. The feature created for that task will make the regression more visible, since the keyboardInputDirection() is used extensively, and the feature will not work without it.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              axisnokia axisnokia (Inactive)
              esabraha Eskil Abrahamsen Blomfeldt
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes