Added Symbian implementation of keyboard language functions.

More specifically, QApplication::keyboardInputLocale() and
QApplication::keyboardInputDirection().

Task:     QTBUG-15600
RevBy:    Sami Merila